Finalizando projeto Barraca-Tipo: CRUD completo com padroes GRASP e persistencia JSON