@@ -1,6 +1,7 @@
 package feira.graspcrud.util;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,7 +12,7 @@ public class JsonMini {
         try {
             Files.createDirectories(Paths.get("data"));
             String json = "[\n" + String.join(",\n", linhas) + "\n]";
-            Files.writeString(Paths.get(caminho), json);
+            Files.write(Paths.get(caminho), json.getBytes(StandardCharsets.UTF_8));
         } catch (IOException e) {
             System.err.println("Erro ao salvar: " + e.getMessage());
         }
@@ -21,14 +22,19 @@ public class JsonMini {
         try {
             Path path = Paths.get(caminho);
             if (!Files.exists(path)) return new ArrayList<>();
-            
-            String conteudo = Files.readString(path);
+
+            byte[] bytes = Files.readAllBytes(path);
+            String conteudo = new String(bytes, StandardCharsets.UTF_8);
 
             conteudo = conteudo.replace("[", "").replace("]", "").trim();
             if (conteudo.isEmpty()) return new ArrayList<>();
-            
+
             String[] partes = conteudo.split("(?<=\\}),\\s*");
-            return List.of(partes);
+            List<String> resultado = new ArrayList<>();
+            for (String p : partes) {
+                resultado.add(p);
+            }
+            return resultado;
         } catch (IOException e) {
             return new ArrayList<>();
         }
